--- a/styles.css
+++ b/styles.css
@@ -9,9 +9,10 @@ div{
     margin: 40px;
     padding: 8px 18px;
     border-radius: 14px;
-    box-shadow: 2px 2px rgba(0,0,0, 0.2);
+    box-shadow: 2px 2px rgba(0,0,0, 0.2);    
 }
 
 div:hover{
     box-shadow: 4px 4px rgba(0,0,0, 0.4);
+    cursor: pointer;
 }
