--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,31 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+
 body{
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    background-image: url("https://cdn.wallpapersafari.com/1/80/8DYndB.png");
+    font-family: "Roboto", sans-serif;
+
 }
 
 div{
     background-color: #daf7c1;
-    width: 100%;
-    max-width: 320px;
+    width: 320px;
     margin: 40px;
     padding: 8px 18px;
     border-radius: 14px;
     box-shadow: 2px 2px rgba(0,0,0, 0.2);    
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 div:hover{
     box-shadow: 4px 4px rgba(0,0,0, 0.4);
     cursor: pointer;
+}
+
+img{
+    width: 40px;
 }
